# HYpHMC

./: .gitignore  AnalyzerIOControl.C  AnalyzerObservable.C  AnalyzerObservable.h  AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.h  AnalyzerObservableFermionMatrixConditionNumber.C  AnalyzerObservableFermionMatrixConditionNumber.h  AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.C  AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.h  AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.C  AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.h  AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.C  AnalyzerObservableGaussianWeightEstimate.C  AnalyzerObservableGaussianWeightEstimate.h  AnalyzerObservableGoldstonePropagator.h  AnalyzerObservableHiggsFourPointFunction.C  AnalyzerObservableHiggsFourPointFunction.h  AnalyzerObservableHiggsGoldstoneUnrotatedCorrelator.h  AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.h  AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.h  AnalyzerObservableHiggsRenormalizedQuarticCoupling.C  AnalyzerObservableHiggsRenormalizedQuarticCoupling.h  AnalyzerObservableMagnetizations.h  AnalyzerObservableMultipleTimeScaleIntegration2.C  AnalyzerObservableMultipleTimeScaleIntegration2.h  AnalyzerObservableMultipleTimeScaleIntegration3.C  AnalyzerObservableMultipleTimeScaleIntegration4.C  AnalyzerObservableMultipleTimeScaleIntegration4.h  AnalyzerObservableMultipleTimeScaleIntegrationTest.h  AnalyzerObservablePhiRenormalizedQuarticCoupling.h  AnalyzerObservablePhiRenormalizedUnsymmetricQuarticCoupling.h  AnalyzerObservablePsiBarPsiChiralLeftHandedCorrGauged.C  AnalyzerObservablePsiBarPsiChiralLeftHandedCorrGauged.h  AnalyzerObservablePsiBarPsiChiralLeftHandedCorrRandomGauged.h  AnalyzerObservablePsiBarPsiChiralRightHandedCorr.h  AnalyzerObservablePsiBarPsiChiralRightHandedCorrGauged.C  (+156 more)
XMLplots/: jScan.xml  template.xml
asmCode/: xSSE_ComplexCopy.S
asmCode64/: xSSE_ComplexCopy.S  xSSE_ComplexVectorAddition.S  xSSE_ExtremeFFT4D_DoFirstSecondAndThird1DD1FFTStepBase2.S  xSSE_ExtremeFFT4D_DoTwo2DFFTStepsBase2.S  xSSE_ExtremeFFT4D_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.S  xSSE_ExtremeFFT4D_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.S  xSSE_ExtremeFFT4D_Write2DSlice.S  xSSE_Global.h  xSSE_PerformNopLoop.S  xSSE_ReadLongIntFromMemAddr.S  xSSE_WriteLongIntToMemAddr.S
input_files/: SimulationParameters.txt  SimulationParametersHybrid.txt  SimulationParameterspHMC.txt
lib/: AnalyzerHiggs.C  AnalyzerHiggs.h  AnalyzerIOControl.C  AnalyzerIOControl.h  AnalyzerObservable.C  AnalyzerObservable.h  AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.C  AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.h  AnalyzerObservableDetSign.C  AnalyzerObservableDetSign.h  AnalyzerObservableFermionMatrixConditionNumber.C  AnalyzerObservableFermionMatrixConditionNumber.h  AnalyzerObservableFermionMatrixConditionNumberNoPreconditioning.C  AnalyzerObservableFermionMatrixConditionNumberNoPreconditioning.h  AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.C  AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.h  AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.C  AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.h  AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMConditionNumberPPreconditioning.C  AnalyzerObservableFermionMatrixSingleMConditionNumberPPreconditioning.h  AnalyzerObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.C  AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.h  AnalyzerObservableFermionMatrixSingleMSpectrumNoPreconditioning.C  AnalyzerObservableFermionMatrixSingleMSpectrumNoPreconditioning.h  AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.C  AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.h  AnalyzerObservableGaussianWeightEstimate.C  AnalyzerObservableGaussianWeightEstimate.h  AnalyzerObservableGoldstonePropagator.C  AnalyzerObservableGoldstonePropagator.h  (+311 more)
mainprogs/: FFTTest.C  HiggsMassFromLargeNf.C  KrylovTest.C  Makefile.am  Makefile.in  PerturbativePredictions.C  PhaseDiagramAtLargeLambda.C  RemezComparison.C  analyzer.C  arpackTest.C  evaluate.C  evaluateConfs.C  evaluateFermionMat.C  evaluateMasses.C  fit.C  fitScatteringPhases.C  hybrid.C  optimizePoly.C  pHMC.C  pract.C  pract2.C  testOps.C  xFFTbenchmark.C
scripts/: archiveConfs  checkAnalyzer  checkEvaluateConfs  checkTestOps  cleanUpBrokenSimulations.py  createToDoList.py  fixbb  job.uv.sh  job.uv.test.sh  makePlot  moveCountables  retrieveConfs  run.sh  startTuneEmbedding
