## Process this file with automake to produce Makefile.in

AM_CXXFLAGS = -I@top_srcdir@ @CXXFLAGS@

nobase_include_HEADERS = AnalyzerHiggs.h AnalyzerIOControl.h \
												 AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.h \
												 AnalyzerObservableDetSign.h \
                         AnalyzerObservableFermionMatrixConditionNumber.h \
												 AnalyzerObservableFermionMatrixConditionNumberNoPreconditioning.h \
                         AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.h \
                         AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.h \
                         AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h \
                         AnalyzerObservableFermionMatrixSingleMConditionNumberPPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMSpectrumNoPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.h\
												 AnalyzerObservableGaussianWeightEstimate.h\
												 AnalyzerObservableGoldstonePropagator.h\
												 AnalyzerObservable.h\
												 AnalyzerObservableHiggsCorrelator.h\
												 AnalyzerObservableHiggsDefinedOnTimeSliceCorrelator.h\
												 AnalyzerObservableHiggsFourPointFunction.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedCorrelator.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.h\
												 AnalyzerObservableHiggsPropagator.h\
												 AnalyzerObservableHiggsRenormalizedQuarticCoupling.h\
												 AnalyzerObservableMagnetizations.h\
												 AnalyzerObservableMultipleTimeScaleIntegration2.h\
												 AnalyzerObservableMultipleTimeScaleIntegration3.h\
												 AnalyzerObservableMultipleTimeScaleIntegration4.h\
												 AnalyzerObservableMultipleTimeScaleIntegration.h\
												 AnalyzerObservableMultipleTimeScaleIntegrationTest.h\
												 AnalyzerObservablePhiRenormalizedQuarticCoupling.h\
												 AnalyzerObservablePhiRenormalizedUnsymmetricQuarticCoupling.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorrGauged.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorr.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorrGauged.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorr.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorrRandomGauged.h\
												 AnalyzerObservablePsiBarPsiCorrBase.h\
												 AnalyzerObservablePsiBarPsiCorrGauged.h\
												 AnalyzerObservablePsiBarPsiCorr.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedCorrGauged.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralCorrBase.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 AnalyzerObservableTwoGoldstoneCorrelator.h\
												 AnalyzerObservableWeight.h\
												 AnalyzerPhiFieldConfiguration.h\
												 AnalyzerTop.h\
												 AutoCorrelation.h\
												 BootStrapClass.h\
												 CacheSimulator.h\
												 ChebyshevOneOverXPlusOne.h\
												 ChebyshevOneOverXPlusOneRelError.h\
												 Complex.h\
												 ComplexMatrix.h\
												 ComplexPolynom.h\
												 ComplexVector.h\
												 ControlLogger.h\
												 DiracMatrix.h\
												 DistributedMemoryObject.h\
												 EvaluateObservableBottomBarBottomCorrChiralLeftHandedGauged.h\
												 EvaluateObservableCorrelatorBase.h\
												 EvaluateObservableDetSign.h\
												 EvaluateObservableFermionMatrixConditionNumberBase.h\
												 EvaluateObservableFermionMatrixConditionNumber.h\
												 EvaluateObservableFermionMatrixConditionNumberNoPreconditioning.h\
												 EvaluateObservableFermionMatrixConditionNumberPPreconditioning.h\
												 EvaluateObservableFermionMatrixConditionNumberQHMPreconditioning.h\
												 EvaluateObservableFermionMatrixLowHighSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixLowHighSpectrumPPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMConditionNumberPPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSpectrumBase.h\
												 EvaluateObservableFermionMatrixSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSpectrumPPreconditioning.h\
												 EvaluateObservableGaussianWeightEstimate.h\
												 EvaluateObservableGoldstonePropagator.h\
												 EvaluateObservable.h\
												 EvaluateObservableHiggsCorrelator.h\
												 EvaluateObservableHiggsDefinedOnTimeSliceCorrelator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedCorrelator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.h\
												 EvaluateObservableHiggsPropagator.h\
												 EvaluateObservableHiggsRenormalizedQuarticCoupling.h\
												 EvaluateObservableMagnetizations.h\
												 EvaluateObservableMultipleTimeScaleIntegration2.h\
												 EvaluateObservableMultipleTimeScaleIntegration3.h\
												 EvaluateObservableMultipleTimeScaleIntegration4.h\
												 EvaluateObservableMultipleTimeScaleIntegration.h\
												 EvaluateObservableMultipleTimeScaleIntegrationTest.h\
												 EvaluateObservablePhiRenormalizedQuarticCoupling.h\
												 EvaluateObservablePhiRenormalizedUnsymmetricQuarticCoupling.h\
												 EvaluateObservablePropagatorBase.h\
												 EvaluateObservablePsiBarPsiCorrBase.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHandedGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHanded.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHandedRandomGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHandedGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHanded.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHandedRandomGauged.h\
												 EvaluateObservablePsiBarPsiCorrGauged.h\
												 EvaluateObservablePsiBarPsiCorr.h\
												 EvaluateObservableTopBarTopCorrChiralLeftHandedGauged.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 EvaluateObservableTwoGoldstoneCorrelator.h\
												 EvaluateObservableWeight.h\
												 ExtremeFFT4D_FFTstep_DoFirstSecondAndThird1DD1FFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_DoTwo2DFFTStepsBase2.h\
                         ExtremeFFT4D_FFTstep.h\
                         ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_Write2DSlice.h\
                         ExtremeFFT4D.h\
                         ExtremeFFT.h\
												 ExtremeFFTasmBlock2.h\
               					 ExtremeFFTasmBlock3.h\
                         ExtremeFFTasmBlock4.h\
                         ExtremeFFTasmBlock5.h\
                         ExtremeFFTasmBlock6.h\
                         ExtremeFFTasmBlock.h\
                         FermionMatrixOperations.h\
												 Force.h\
												 GeneralChebyshevApproximation.h\
												 Global.h\
												 HighPrecisionComplex.h\
												 HighPrecisionComplexPolynom.h\
												 HMCForce.h\
												 HMCPropagator.h\
												 LAPsystemPlot.h\
												 LatexAndPlottingSystem.h\
												 LatexSummary.h\
												 LatticeMomentumBins.h\
												 LatticeSiteBins.h\
												 MassCorrelationMatrixAnalyzer.h\
												 MultiThreadedOperations.h\
												 NeubergerMatrix.h\
												 PerformanceProfiler.h\
												 pHMCForce.h\
												 pHMCPropagator.h\
												 PolynomialApproximation.h\
												 PowerPolynomialsOneOverX.h\
												 Propagator.h\
												 PTAnalysisDiagram.h\
												 PTAnalysisDiagramHiggsPropagatorFermionLoop.h\
												 PTAnalysis.h\
												 Quat.h\
												 SecondOrderBosonicEffectivePotential.h\
												 SimulationParameterSet.h\
				                 SSEroutines.h \
												 StateDescriptorReader.h\
												 ThreadControl.h\
                         Tools.h \
                         TuningDataBase.h\
												 WilsonMatrix.h\
												 xSSE.h


##-----------------------------------------------------------

bin_PROGRAMS = pHMC 

##-----------------------------------------------------------
pHMC_SOURCES = pHMC.C \
							 CacheSimulator.C\
							 ChebyshevOneOverXPlusOne.C\
							 ChebyshevOneOverXPlusOneRelError.C\
							 Complex.C\
							 ComplexMatrix.C\
							 ComplexPolynom.C\
							 ComplexVector.C\
							 DiracMatrix.C\
							 DistributedMemoryObject.C\
							 ExtremeFFT4D.C \
               ExtremeFFT4D_FFTstep.C\
               ExtremeFFT4D_FFTstep_DoFirstSecondAndThird1DD1FFTStepBase2.C\
               ExtremeFFT4D_FFTstep_DoTwo2DFFTStepsBase2.C\
               ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.C\
               ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.C\
               ExtremeFFT4D_FFTstep_Write2DSlice.C\
                              ExtremeFFT.C\
               FermionMatrixOperations.C\
							 Force.C\
							 GeneralChebyshevApproximation.C\
							 Global.C\
							 HighPrecisionComplex.C\
							 HighPrecisionComplexPolynom.C\
							 HMCForce.C\
							 HMCPropagator.C\
							 LatticeMomentumBins.C\
							 LatticeSiteBins.C\
							 MultiThreadedOperations.C\
							 NeubergerMatrix.C\
							 PerformanceProfiler.C\
							 pHMCForce.C\
							 pHMCPropagator.C\
							 PolynomialApproximation.C\
							 PowerPolynomialsOneOverX.C\
							 Propagator.C\
							 Quat.C\
							 SimulationParameterSet.C\
							 SSEroutines.C\
               StateDescriptorReader.C\
							 ThreadControl.C\
							 Tools.C\
							 TuningDataBase.C\
							 WilsonMatrix.C\
							 xSSE.C

##------------------------------------------------------------



