#This is the top level input file read by Automake. It sets the path to aclocal macros, and lists the directories into which automake should recurse. 

#
# Recurse down into lib (to build the library)
#                   includes (to install includes)
#                   main (build main programs)
#
SUBDIRS = asmCode64 lib mainprogs 


