## Process this file with automake to produce Makefile.in

AM_LDFLAGS = -L@topbuilddir@/asmCode64
LDADD = -lxSSE64

nobase_include_HEADERS = AnalyzerHiggs.h AnalyzerIOControl.h \
												 AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.h \
												 AnalyzerObservableDetSign.h \
                         AnalyzerObservableFermionMatrixConditionNumber.h \
												 AnalyzerObservableFermionMatrixConditionNumberNoPreconditioning.h \
                         AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.h \
                         AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.h \
                         AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h \
                         AnalyzerObservableFermionMatrixSingleMConditionNumberPPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.h\
                         AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMSpectrumNoPreconditioning.h\
												 AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.h\
												 AnalyzerObservableGaussianWeightEstimate.h\
												 AnalyzerObservableGoldstonePropagator.h\
												 AnalyzerObservable.h\
												 AnalyzerObservableHiggsCorrelator.h\
												 AnalyzerObservableHiggsDefinedOnTimeSliceCorrelator.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedCorrelator.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.h\
												 AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.h\
												 AnalyzerObservableHiggsPropagator.h\
												 AnalyzerObservableHiggsRenormalizedQuarticCoupling.h\
												 AnalyzerObservableHiggsTopBarTopChiralLeftHandedVertexGauged.h\
												 AnalyzerObservableMagnetizations.h\
												 AnalyzerObservableMultipleTimeScaleIntegration2.h\
												 AnalyzerObservableMultipleTimeScaleIntegration3.h\
												 AnalyzerObservableMultipleTimeScaleIntegration4.h\
												 AnalyzerObservableMultipleTimeScaleIntegration.h\
												 AnalyzerObservableMultipleTimeScaleIntegrationTest.h\
												 AnalyzerObservablePhiRenormalizedQuarticCoupling.h\
												 AnalyzerObservablePhiRenormalizedUnsymmetricQuarticCoupling.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorrGauged.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorr.h\
												 AnalyzerObservablePsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorrGauged.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorr.h\
												 AnalyzerObservablePsiBarPsiChiralRightHandedCorrRandomGauged.h\
												 AnalyzerObservablePsiBarPsiCorrBase.h\
												 AnalyzerObservablePsiBarPsiCorrGauged.h\
												 AnalyzerObservablePsiBarPsiCorr.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedCorrGauged.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralCorrBase.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.h\
												 AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 AnalyzerObservableTwoGoldstoneCorrelator.h\
												 AnalyzerObservableWeight.h\
												 AnalyzerPhiFieldConfiguration.h\
												 AnalyzerTop.h\
												 AnalyzerObservablePsiBarPhiPsiChiralLeftHandedCondensate.h\
												 AnalyzerObservablePsiBarPhiPsiCondensateBase.h\
												 AnalyzerObservablePsiBarPsiCondensateBase.h\
												 AnalyzerObservablePsiBarPsiPropagatorBase.h\
												 AnalyzerObservableScalarCondensate.h\
												 AnalyzerObservableScalarPsiBarPsiVertexBase.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedCondensatePointSource.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedCondensatePointSourceGauged.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedCondensateStochasticSource.h\
                         AnalyzerObservableTopBarTopChiralLeftHandedCondensateStochasticSourceGauged.h\
                         AnalyzerObservableTopBarTopChiralLeftHandedCorr.h\
												 AnalyzerObservableTopBarTopChiralLeftHandedPropagator.h\
												 AutoCorrelation.h\
												 BootStrapClass.h\
												 CacheSimulator.h\
												 ChebyshevOneOverXPlusOne.h\
												 ChebyshevOneOverXPlusOneRelError.h\
												 Complex.h\
												 ComplexMatrix.h\
												 ComplexPolynom.h\
												 ComplexVector.h\
												 ControlLogger.h\
												 DiracMatrix.h\
												 DistributedMemoryObject.h\
												 EvaluateObservableBottomBarBottomCorrChiralLeftHandedGauged.h\
												 EvaluateObservableCorrelatorBase.h\
												 EvaluateObservableDetSign.h\
												 EvaluateObservableFermionMatrixConditionNumberBase.h\
												 EvaluateObservableFermionMatrixConditionNumber.h\
												 EvaluateObservableFermionMatrixConditionNumberNoPreconditioning.h\
												 EvaluateObservableFermionMatrixConditionNumberPPreconditioning.h\
												 EvaluateObservableFermionMatrixConditionNumberQHMPreconditioning.h\
												 EvaluateObservableFermionMatrixLowHighSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixLowHighSpectrumPPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMConditionNumberNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMConditionNumberPPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSpectrumBase.h\
												 EvaluateObservableFermionMatrixSpectrumNoPreconditioning.h\
												 EvaluateObservableFermionMatrixSpectrumPPreconditioning.h\
												 EvaluateObservableGaussianWeightEstimate.h\
												 EvaluateObservableGoldstonePropagator.h\
												 EvaluateObservable.h\
												 EvaluateObservableHiggsCorrelator.h\
												 EvaluateObservableHiggsDefinedOnTimeSliceCorrelator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedCorrelator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.h\
												 EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.h\
												 EvaluateObservableHiggsPropagator.h\
												 EvaluateObservableHiggsRenormalizedQuarticCoupling.h\
												 EvaluateObservableMagnetizations.h\
												 EvaluateObservableMultipleTimeScaleIntegration2.h\
												 EvaluateObservableMultipleTimeScaleIntegration3.h\
												 EvaluateObservableMultipleTimeScaleIntegration4.h\
												 EvaluateObservableMultipleTimeScaleIntegration.h\
												 EvaluateObservableMultipleTimeScaleIntegrationTest.h\
												 EvaluateObservablePhiRenormalizedQuarticCoupling.h\
												 EvaluateObservablePhiRenormalizedUnsymmetricQuarticCoupling.h\
												 EvaluateObservablePropagatorBase.h\
												 EvaluateObservablePsiBarPsiCorrBase.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHandedGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHanded.h\
												 EvaluateObservablePsiBarPsiCorrChiralLeftHandedRandomGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHandedGauged.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHanded.h\
												 EvaluateObservablePsiBarPsiCorrChiralRightHandedRandomGauged.h\
												 EvaluateObservablePsiBarPsiCorrGauged.h\
												 EvaluateObservablePsiBarPsiCorr.h\
												 EvaluateObservableTopBarTopCorrChiralLeftHandedGauged.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.h\
												 EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.h\
												 EvaluateObservableTwoGoldstoneCorrelator.h\
												 EvaluateObservableWeight.h\
												 EvaluateObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.h\
												 EvaluateObservableHiggsTopBarTopChiralLeftHandedVertexGauged.h\
												 EvaluateObservablePsiBarPhiPsiChiralLeftHandedCondensate.h\
												 EvaluateObservablePsiBarPsiCondensateBase.h\
												 EvaluateObservablePsiBarPsiPropagatorBase.h\
												 EvaluateObservableScalarCondensate.h\
												 EvaluateObservableScalarPsiBarPsiVertexBase.h\
												 EvaluateObservableTopBarTopChiralLeftHandedCondensatePointSource.h\
												 EvaluateObservableTopBarTopChiralLeftHandedCondensatePointSourceGauged.h\
												 EvaluateObservableTopBarTopChiralLeftHandedCondensateStochasticSource.h\
												 EvaluateObservableTopBarTopChiralLeftHandedCondensateStochasticSourceGauged.h\
												 EvaluateObservableTopBarTopPropagatorChiralLeftHandedGauged.h\
												 ExtremeFFT4D_FFTstep_DoFirstSecondAndThird1DD1FFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_DoTwo2DFFTStepsBase2.h\
                         ExtremeFFT4D_FFTstep.h\
                         ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.h\
                         ExtremeFFT4D_FFTstep_Write2DSlice.h\
                         ExtremeFFT4D.h\
                         ExtremeFFT.h\
												 ExtremeFFTasmBlock2.h\
               					 ExtremeFFTasmBlock3.h\
                         ExtremeFFTasmBlock4.h\
                         ExtremeFFTasmBlock5.h\
                         ExtremeFFTasmBlock6.h\
                         ExtremeFFTasmBlock.h\
                         FermionMatrixOperations.h\
												 Force.h\
												 GeneralChebyshevApproximation.h\
												 Global.h\
												 HighPrecisionComplex.h\
												 HighPrecisionComplexPolynom.h\
												 HMCForce.h\
												 HMCPropagator.h\
												 LAPsystemPlot.h\
												 LatexAndPlottingSystem.h\
												 LatexSummary.h\
												 LatticeMomentumBins.h\
												 LatticeSiteBins.h\
												 MassCorrelationMatrixAnalyzer.h\
												 MultiThreadedOperations.h\
												 NeubergerMatrix.h\
												 PerformanceProfiler.h\
												 pHMCForce.h\
												 pHMCPropagator.h\
												 PolynomialApproximation.h\
												 PowerPolynomialsOneOverX.h\
												 Propagator.h\
												 PTAnalysisDiagram.h\
												 PTAnalysisDiagramHiggsPropagatorFermionLoop.h\
												 PTAnalysis.h\
												 Quat.h\
												 SecondOrderBosonicEffectivePotential.h\
												 SimulationParameterSet.h\
				                 SSEroutines.h \
												 StateDescriptorReader.h\
												 ThreadControl.h\
                         Tools.h \
                         TuningDataBase.h\
												 WilsonMatrix.h\
												 xSSE.h\
												 @top_srcdir@/asmCode64/xSSE_Global.h
##----------------------------------------------------------

lib_LIBRARIES = libhyphmc.a

##-----------------------------------------------------------
libhyphmc_a_SOURCES = AnalyzerHiggs.C \
											AnalyzerIOControl.C\
											AnalyzerObservableBottomBarBottomChiralLeftHandedCorrGauged.C\
											AnalyzerObservable.C\
											AnalyzerObservableDetSign.C\
											AnalyzerObservableFermionMatrixConditionNumber.C\
											AnalyzerObservableFermionMatrixConditionNumberNoPreconditioning.C\
											AnalyzerObservableFermionMatrixConditionNumberPPreconditioning.C\
											AnalyzerObservableFermionMatrixConditionNumberQHMPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMConditionNumberNoPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMConditionNumberPPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMLowHighSpectrumNoPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMLowHighSpectrumPPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMSpectrumNoPreconditioning.C\
											AnalyzerObservableFermionMatrixSingleMSpectrumPPreconditioning.C\
											AnalyzerObservableGaussianWeightEstimate.C\
											AnalyzerObservableGoldstonePropagator.C\
											AnalyzerObservableHiggsCorrelator.C\
											AnalyzerObservableHiggsDefinedOnTimeSliceCorrelator.C\
											AnalyzerObservableHiggsGoldstoneUnrotatedCorrelator.C\
											AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.C\
											AnalyzerObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.C\
											AnalyzerObservableHiggsPropagator.C\
											AnalyzerObservableHiggsRenormalizedQuarticCoupling.C\
											AnalyzerObservableMagnetizations.C\
											AnalyzerObservableMultipleTimeScaleIntegration2.C\
											AnalyzerObservableMultipleTimeScaleIntegration3.C\
											AnalyzerObservableMultipleTimeScaleIntegration4.C\
											AnalyzerObservableMultipleTimeScaleIntegration.C\
											AnalyzerObservableMultipleTimeScaleIntegrationTest.C\
											AnalyzerObservablePhiRenormalizedQuarticCoupling.C\
											AnalyzerObservablePhiRenormalizedUnsymmetricQuarticCoupling.C\
											AnalyzerObservablePsiBarPsiChiralLeftHandedCorr.C\
											AnalyzerObservablePsiBarPsiChiralLeftHandedCorrGauged.C\
											AnalyzerObservablePsiBarPsiChiralLeftHandedCorrRandomGauged.C\
											AnalyzerObservablePsiBarPsiChiralRightHandedCorr.C\
											AnalyzerObservablePsiBarPsiChiralRightHandedCorrGauged.C\
											AnalyzerObservablePsiBarPsiChiralRightHandedCorrRandomGauged.C\
											AnalyzerObservablePsiBarPsiCorrBase.C\
											AnalyzerObservablePsiBarPsiCorr.C\
											AnalyzerObservablePsiBarPsiCorrGauged.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCorrGauged.C\
											AnalyzerObservableTwoFermionPsiBarPsiChiralCorrBase.C\
											AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.C\
											AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.C\
											AnalyzerObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.C\
											AnalyzerObservableTwoGoldstoneCorrelator.C\
											AnalyzerObservableWeight.C\
											AnalyzerPhiFieldConfiguration.C\
											AnalyzerObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.C\
											AnalyzerObservableHiggsTopBarTopChiralLeftHandedVertexGauged.C\
											AnalyzerObservablePsiBarPhiPsiChiralLeftHandedCondensate.C\
											AnalyzerObservablePsiBarPhiPsiCondensateBase.C\
											AnalyzerObservablePsiBarPsiCondensateBase.C\
											AnalyzerObservablePsiBarPsiPropagatorBase.C\
											AnalyzerObservableScalarCondensate.C\
											AnalyzerObservableScalarPsiBarPsiVertexBase.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCondensatePointSource.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCondensatePointSourceGauged.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCondensateStochasticSource.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCondensateStochasticSourceGauged.C\
											AnalyzerObservableTopBarTopChiralLeftHandedCorr.C\
											AnalyzerObservableTopBarTopChiralLeftHandedPropagator.C\
											AnalyzerTop.C\
											AutoCorrelation.C\
                      CacheSimulator.C\
											ChebyshevOneOverXPlusOne.C\
											ChebyshevOneOverXPlusOneRelError.C\
											Complex.C\
											ComplexMatrix.C\
											ComplexPolynom.C\
											ComplexVector.C\
											ControlLogger.C\
											DiracMatrix.C\
											DistributedMemoryObject.C\
											EvaluateObservableBottomBarBottomCorrChiralLeftHandedGauged.C\
											EvaluateObservable.C\
											EvaluateObservableCorrelatorBase.C\
											EvaluateObservableDetSign.C\
											EvaluateObservableFermionMatrixConditionNumberBase.C\
											EvaluateObservableFermionMatrixConditionNumber.C\
											EvaluateObservableFermionMatrixConditionNumberNoPreconditioning.C\
											EvaluateObservableFermionMatrixConditionNumberPPreconditioning.C\
											EvaluateObservableFermionMatrixConditionNumberQHMPreconditioning.C\
											EvaluateObservableFermionMatrixLowHighSpectrumNoPreconditioning.C\
											EvaluateObservableFermionMatrixLowHighSpectrumPPreconditioning.C\
											EvaluateObservableFermionMatrixSingleMConditionNumberNoPreconditioning.C\
											EvaluateObservableFermionMatrixSingleMConditionNumberPPreconditioning.C\
											EvaluateObservableFermionMatrixSingleMFullRanSpectrumNoPreconditioning.C\
											EvaluateObservableFermionMatrixSingleMFullSpectrumNoPreconditioning.C\
											EvaluateObservableFermionMatrixSpectrumBase.C\
											EvaluateObservableFermionMatrixSpectrumNoPreconditioning.C\
											EvaluateObservableFermionMatrixSpectrumPPreconditioning.C\
											EvaluateObservableGaussianWeightEstimate.C\
											EvaluateObservableGoldstonePropagator.C\
											EvaluateObservableHiggsCorrelator.C\
											EvaluateObservableHiggsDefinedOnTimeSliceCorrelator.C\
											EvaluateObservableHiggsGoldstoneUnrotatedCorrelator.C\
											EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK012Correlator.C\
											EvaluateObservableHiggsGoldstoneUnrotatedTwoParticleK0Correlator.C\
											EvaluateObservableHiggsPropagator.C\
											EvaluateObservableHiggsRenormalizedQuarticCoupling.C\
											EvaluateObservableMagnetizations.C\
											EvaluateObservableMultipleTimeScaleIntegration2.C\
											EvaluateObservableMultipleTimeScaleIntegration3.C\
											EvaluateObservableMultipleTimeScaleIntegration4.C\
											EvaluateObservableMultipleTimeScaleIntegration.C\
											EvaluateObservableMultipleTimeScaleIntegrationTest.C\
											EvaluateObservablePhiRenormalizedQuarticCoupling.C\
											EvaluateObservablePhiRenormalizedUnsymmetricQuarticCoupling.C\
											EvaluateObservablePropagatorBase.C\
											EvaluateObservablePsiBarPsiCorrBase.C\
											EvaluateObservablePsiBarPsiCorr.C\
											EvaluateObservablePsiBarPsiCorrChiralLeftHanded.C\
											EvaluateObservablePsiBarPsiCorrChiralLeftHandedGauged.C\
											EvaluateObservablePsiBarPsiCorrChiralLeftHandedRandomGauged.C\
											EvaluateObservablePsiBarPsiCorrChiralRightHanded.C\
											EvaluateObservablePsiBarPsiCorrChiralRightHandedGauged.C\
											EvaluateObservablePsiBarPsiCorrChiralRightHandedRandomGauged.C\
											EvaluateObservablePsiBarPsiCorrGauged.C\
											EvaluateObservableTopBarTopCorrChiralLeftHandedGauged.C\
											EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorr.C\
											EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrGauged.C\
											EvaluateObservableTwoFermionPsiBarPsiChiralLeftHandedCorrRandomGauged.C\
											EvaluateObservableTwoGoldstoneCorrelator.C\
											EvaluateObservableWeight.C\
											EvaluateObservableFermionMatrixSingleMFullNoXiSpectrumNoPreconditioning.C\
											EvaluateObservableHiggsTopBarTopChiralLeftHandedVertexGauged.C\
											EvaluateObservablePsiBarPhiPsiChiralLeftHandedCondensate.C\
											EvaluateObservablePsiBarPsiCondensateBase.C\
											EvaluateObservablePsiBarPsiPropagatorBase.C\
											EvaluateObservableScalarCondensate.C\
											EvaluateObservableScalarPsiBarPsiVertexBase.C\
											EvaluateObservableTopBarTopChiralLeftHandedCondensatePointSource.C\
											EvaluateObservableTopBarTopChiralLeftHandedCondensatePointSourceGauged.C\
											EvaluateObservableTopBarTopChiralLeftHandedCondensateStochasticSource.C\
											EvaluateObservableTopBarTopChiralLeftHandedCondensateStochasticSourceGauged.C\
											EvaluateObservableTopBarTopPropagatorChiralLeftHandedGauged.C\
											ExtremeFFT4D.C \
											ExtremeFFT4D_FFTstep.C\
											ExtremeFFT4D_FFTstep_DoFirstSecondAndThird1DD1FFTStepBase2.C\
											ExtremeFFT4D_FFTstep_DoTwo2DFFTStepsBase2.C\
											ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.C\
											ExtremeFFT4D_FFTstep_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.C\
											ExtremeFFT4D_FFTstep_Write2DSlice.C\
											ExtremeFFT.C\
											FermionMatrixOperations.C\
											Force.C\
											GeneralChebyshevApproximation.C\
											Global.C\
											HighPrecisionComplex.C\
											HighPrecisionComplexPolynom.C\
											HMCForce.C\
											HMCPropagator.C\
											LAPsystemPlot.C\
											LatexAndPlottingSystem.C\
                      LatticeMomentumBins.C\
											LatticeSiteBins.C\
											MassCorrelationMatrixAnalyzer.C\
											MultiThreadedOperations.C\
											NeubergerMatrix.C\
											PerformanceProfiler.C\
											pHMCForce.C\
											pHMCPropagator.C\
											PolynomialApproximation.C\
											PowerPolynomialsOneOverX.C\
											Propagator.C\
											Quat.C\
											SecondOrderBosonicEffectivePotential.C\
											SimulationParameterSet.C\
											SSEroutines.C\
											StateDescriptorReader.C\
											ThreadControl.C\
											Tools.C\
											TuningDataBase.C\
											WilsonMatrix.C\
											xSSE.C\
											@top_srcdir@/asmCode64/xSSE_ComplexCopy.S\
											@top_srcdir@/asmCode64/xSSE_ComplexVectorAddition.S\
											@top_srcdir@/asmCode64/xSSE_ExtremeFFT4D_DoFirstSecondAndThird1DD1FFTStepBase2.S\
											@top_srcdir@/asmCode64/xSSE_ExtremeFFT4D_DoTwo2DFFTStepsBase2.S\
											@top_srcdir@/asmCode64/xSSE_ExtremeFFT4D_Read2DSliceAndDoFirstAndSecond2DFFTStepBase2.S\
											@top_srcdir@/asmCode64/xSSE_ExtremeFFT4D_Read2DSliceAndDoFirstSecondAndThird1DD2FFTStepBase2.S\
											@top_srcdir@/asmCode64/xSSE_ExtremeFFT4D_Write2DSlice.S\
											@top_srcdir@/asmCode64/xSSE_PerformNopLoop.S \
											@top_srcdir@/asmCode64/xSSE_ReadLongIntFromMemAddr.S\
											@top_srcdir@/asmCode64/xSSE_WriteLongIntToMemAddr.S

##------------------------------------------------------------



